--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+</style>
+</head>
+<body>
+
+<h1>Максим Шешуков</h1>
+
 <table>
 	<tr>
 		<td>
@@ -42,7 +52,7 @@
 	</tr>
 <table>
 
-### Образование
+<h2>Образование</h2>
 
 <table>
 	<tr>
@@ -55,7 +65,7 @@
 	</tr>
 </table>
 
-### Опыт работы
+<h2>Опыт работы</h2>
 
 <table>
 	<tr>
@@ -72,9 +82,9 @@
 	</tr>
 </table>
 
-*дополнительно, январь 2016 — май 2016: преподаватель-семинарист ООП С++, кафедра АФТИ при НГУ*
+<i>дополнительно, январь 2016 — май 2016: преподаватель-семинарист ООП С++, кафедра АФТИ при НГУ</i>
 
-### Навыки
+<h2>Навыки</h2>
 
 <table>
 	<tr>
@@ -115,30 +125,31 @@
 	</tr>
 </table>
 
-### Публикации в play market
-[Foody](https://play.google.com/store/apps/details?id=ru.bananabits.android.foody) - приложение для составления списка покупок из выбранных пользователем рецептов. Вычисляет какие продукты нужно купить и в каком количестве. Написано с использованием C++, Qt, QML, QtFirebase, QtAndroidExtensions(2gis). Тесты написаны с использование catch.
+<h2>Публикации в play market</h2>
 
-[Sharp](https://play.google.com/store/apps/details?id=ru.bananabits.android.sharp) - симулятор реального пистолета, позволяет пользователю выбрать мишень в окружающем его пространстве и стрелять в нее, держа телефон как настоящий пистолет. Вычисляет набранное количество очков и их среднее значение. Написано на Kotlin с использованием Dagger2, Firebase Analytics, Admob. Для вычисления попаданий в мишень используются сенсоры телефона RotationVector, Magnetic Field, Gyroscope, Gravity/Accelerometer.
+<p><a href="https://play.google.com/store/apps/details?id=ru.bananabits.android.foody">Foody</a> - приложение для составления списка покупок из выбранных пользователем рецептов. Вычисляет какие продукты нужно купить и в каком количестве. Написано с использованием C++, Qt, QML, QtFirebase, QtAndroidExtensions(2gis). Тесты написаны с использование catch.</p>
 
-### Ссылки на сертификаты
+<p><a href="https://play.google.com/store/apps/details?id=ru.bananabits.android.sharp">Sharp</a> - симулятор реального пистолета, позволяет пользователю выбрать мишень в окружающем его пространстве и стрелять в нее, держа телефон как настоящий пистолет. Вычисляет набранное количество очков и их среднее значение. Написано на Kotlin с использованием Dagger2, Firebase Analytics, Admob. Для вычисления попаданий в мишень используются сенсоры телефона RotationVector, Magnetic Field, Gyroscope, Gravity/Accelerometer.</p>
 
-[С++](https://drive.google.com/open?id=15Oub2s6kyQ46cU-gVCYjzJBZNLYL0y9J)
-[git](https://drive.google.com/open?id=180_r3mn6kDGEWIykSrBRIUl5itSl7ESX)
-[agile](https://drive.google.com/open?id=1a9K-tL_NADU9Zwgygf9IrW-60UL5gcNB)
+<h2>Ссылки на сертификаты</h2>
 
-### Участие в проектах
+<a href="https://drive.google.com/open?id=15Oub2s6kyQ46cU-gVCYjzJBZNLYL0y9J">С++</a>
+<a href="https://drive.google.com/open?id=180_r3mn6kDGEWIykSrBRIUl5itSl7ESX">git</a>
+<a href="https://drive.google.com/open?id=1a9K-tL_NADU9Zwgygf9IrW-60UL5gcNB">agile</a>
 
-[SoftLab Biathlon Coach]( https://yadi.sk/i/SCxe3UgikCHA2 ) - тренажер для стрельбы холостыми патронами по биатлонной мишени. На ствол крепится видеокамера, анализ видео прогнозирует куда попадет пуля. Мной была разработана архитектура системы, реализован сетевой протокол для управления мишенью, разработан пользовательский интерфейс. Приложение написано на С++ с использованием MFC и directshow.
+<h2>Участие в проектах</h2>
 
-[Movavi Video Editor](https://www.movavi.ru/videoeditor/) - win/mac приложение, которое разрабатывалось более десяти лет, над которым работали несколько отдельных команд. Преимущественно занимался задачами бизнес логики, добавлением нового функционала, версткой пользовательского интерфейса, внедрением автотестов и исправлением багов. При работе использовал C++, Qt, catch, cmake.
+<p><a href="https://yadi.sk/i/SCxe3UgikCHA2">SoftLab Biathlon Coach</a> - тренажер для стрельбы холостыми патронами по биатлонной мишени. На ствол крепится видеокамера, анализ видео прогнозирует куда попадет пуля. Мной была разработана архитектура системы, реализован сетевой протокол для управления мишенью, разработан пользовательский интерфейс. Приложение написано на С++ с использованием MFC и directshow.</p>
 
-[2GIS](https://play.google.com/store/apps/details?id=ru.dublgis.dgismobile) - android приложение для работы с картой города. Работал в команде ядра, занимался разработкой внутренних интерфейсов для команд android и iOS. Разработка велась на C++ с использованием Qt, QML, boost, под linux, в качестве среды разработки QtCreator.
+<p><a href="https://www.movavi.ru/videoeditor/">Movavi Video Editor</a> - win/mac приложение, которое разрабатывалось более десяти лет, над которым работали несколько отдельных команд. Преимущественно занимался задачами бизнес логики, добавлением нового функционала, версткой пользовательского интерфейса, внедрением автотестов и исправлением багов. При работе использовал C++, Qt, catch, cmake.</p>
 
-### Обо мне
+<p><a href="https://play.google.com/store/apps/details?id=ru.dublgis.dgismobile">2GIS</a> - android приложение для работы с картой города. Работал в команде ядра, занимался разработкой внутренних интерфейсов для команд android и iOS. Разработка велась на C++ с использованием Qt, QML, boost, под linux, в качестве среды разработки QtCreator.
+
+<h2>Обо мне</h2>
 
 Целеустремленный, готов сутками думать над решением задачи. Есть желание постоянно развиваться и учиться чему-то новому. Хочу работать в команде с профессионалами, у которых можно будет чему-нибудь научиться. Всегда готов помочь коллеге разобраться в сложном коде или принять архитектурное решение. Есть опыт работы с user story, но предпочитаю работать по спецификациям.
 
-### Профессиональные интересы
+<h2>Профессиональные интересы</h2>
 
 Читаю техническую литературу по специализации, такие книги как Макконнелл С. «Совершенный код», Герб Саттер «Решение сложных задач на C++»,  Макс Шлее «Qt 5.3 Профессиональное программирование на C++», не считая документаций по Git, Qt, STL и других библиотек.
 Интересуюсь архитектурными решениями, знаком с паттернами проектирования, прослушал курс лекций Немчинского Сергея «Шаблоны разработки». Изучал UML в Visual Paradigm, хочется попробовать применить эти знания в коммерческих проектах.
@@ -146,3 +157,6 @@
 Стараюсь сделать работу максимально удобной и автоматизированной. Именно по этому причине было потрачено время на изучение текстового редактора Vim. Есть желания собрать полноценную IDE, на базе этого редактора, но пока есть более приоритетные задачи.
 Регулярно посещаю занятия по английскому языку, чтобы лучше работать с англоязычными источниками информации. Хотелось бы использовать его в работе, общаться с иностранными сотрудниками или заказчиками, посещать зарубежные конференции.
 Преимущественно занимался разработкой под Windows, есть небольшой опыт разработки под Mac. Хочется заниматься коммерческой разработкой под Mac или под Linux.  
+
+</body>
+</html>
