Sharp description small fix

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
 <p><a href="https://play.google.com/store/apps/details?id=ru.bananabits.android.foody">Foody</a> - приложение для составления списка покупок из выбранных пользователем рецептов. Вычисляет какие продукты нужно купить и в каком количестве. Написано с использованием C++, Qt, QML, QtFirebase, QtAndroidExtensions(2gis). Тесты написаны с использование catch.</p>
 
-<p><a href="https://play.google.com/store/apps/details?id=ru.bananabits.android.sharp">Sharp</a> - симулятор реального пистолета, позволяет пользователю выбрать мишень в окружающем его пространстве и стрелять в нее, держа телефон как настоящий пистолет. Вычисляет набранное количество очков и их среднее значение. Написано на Kotlin с использованием Dagger2, Firebase Analytics, Admob. Для вычисления попаданий в мишень используются сенсоры телефона RotationVector, Magnetic Field, Gyroscope, Gravity/Accelerometer.</p>
+<p><a href="https://play.google.com/store/apps/details?id=ru.bananabits.android.sharp">Sharp</a> - симулятор реального пистолета. С помощью сенсоров определяет ориентацию телефона в пространстве, позволяет пользователю выбрать мишень и стрелять в нее, используя телефон как настоящий пистолет. Вычисляет точность выстрелов и количество набранных очков. Написано на Kotlin с использованием Dagger2, Firebase Analytics, Admob.
 
 <h2>Ссылки на сертификаты</h2>
 
