Add title and icon

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<title>Максим Шешуков | C++/Android разрабочик</title>
+	<link rel="shortcut icon" type="image/x-icon" href="./images/title_icon.png" />
 <style>
 </style>
 </head>
