Add section about myself

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <table>
 	<tr>
 		<td nowrap>январь 2009 — июнь 2012</td>
-		<td> С++ программист при институте ИАиЭ СО РАН</td>
+		<td>С++ программист при институте ИАиЭ СО РАН</td>
 	</tr>
 	<tr>
 		<td nowrap>ноябрь 2013 — июнь 2018</td>
@@ -149,16 +149,9 @@
 
 <h2>Обо мне</h2>
 
-Целеустремленный, готов сутками думать над решением задачи. Есть желание постоянно развиваться и учиться чему-то новому. Хочу работать в команде с профессионалами, у которых можно будет чему-нибудь научиться. Всегда готов помочь коллеге разобраться в сложном коде или принять архитектурное решение. Есть опыт работы с user story, но предпочитаю работать по спецификациям.
+<p>Целеустремленный, могу сутками думать над решением задачи. Есть желание постоянно развиваться и учиться чему-то новому. Считаю, что дорогие и качественные решения, лучше чем дешевые и временные. Предпочел бы иметь широкий кругозор и умение быстро разбираться, чем глубокие знания в узкой области. При решении задач стараюсь искать наилучшее решение, не всегда это первое рабочее решение.</p>
 
-<h2>Профессиональные интересы</h2>
-
-Читаю техническую литературу по специализации, такие книги как Макконнелл С. «Совершенный код», Герб Саттер «Решение сложных задач на C++»,  Макс Шлее «Qt 5.3 Профессиональное программирование на C++», не считая документаций по Git, Qt, STL и других библиотек.
-Интересуюсь архитектурными решениями, знаком с паттернами проектирования, прослушал курс лекций Немчинского Сергея «Шаблоны разработки». Изучал UML в Visual Paradigm, хочется попробовать применить эти знания в коммерческих проектах.
-Изучаю Python3, как второй язык программирования, чтобы использовать его для быстрого прототипирования и написания скриптов автоматизации. Хотелось бы попробовать этот язык в качестве основного в коммерческой разработке.
-Стараюсь сделать работу максимально удобной и автоматизированной. Именно по этому причине было потрачено время на изучение текстового редактора Vim. Есть желания собрать полноценную IDE, на базе этого редактора, но пока есть более приоритетные задачи.
-Регулярно посещаю занятия по английскому языку, чтобы лучше работать с англоязычными источниками информации. Хотелось бы использовать его в работе, общаться с иностранными сотрудниками или заказчиками, посещать зарубежные конференции.
-Преимущественно занимался разработкой под Windows, есть небольшой опыт разработки под Mac. Хочется заниматься коммерческой разработкой под Mac или под Linux.  
+<p>Долгое время использовал исключительно C++, потом родилась идея написать свое мобильное приложение на С++/QML. В ходе работы возникла необходимость использовать платформозависимый код, так я заинтересовался платформой Android и прочел хорошую книгу "Android. Программирование для профессионалов 3-е издание 2017". Опыт работы с C++ позволил без труда читать java код, но не все примеры кода на Kotlin мне были понятны, так я заинтересовался Kotlin. Мне понравился этот язык, и чтобы получше в нем разобраться написал еще одно приложение и опубликовал его в play market. Хоть у меня и мало опыта работы с Android, но у меня есть интерес и мотивация продолжать развиваться в этом направлении.</p>
 
 </body>
 </html>
