--- a/index.html
+++ b/index.html
@@ -178,7 +178,9 @@
 
 <p>Долгое время использовал исключительно C++, потом родилась идея написать свое мобильное приложение на С++/QML. В ходе работы возникла необходимость использовать платформозависимый код, так я заинтересовался платформой Android и прочел хорошую книгу "Android. Программирование для профессионалов 3-е издание 2017". Опыт работы с C++ позволил без труда читать java код, но не все примеры кода на Kotlin мне были понятны, так я заинтересовался Kotlin. Мне понравился этот язык, и чтобы получше в нем разобраться написал еще одно приложение и опубликовал его в play market. Хоть у меня и мало опыта работы с Android, но у меня есть интерес и мотивация продолжать развиваться в этом направлении.</p>
 
-<a href="https://pdf-ace.com/pdfme/" target= "_blank">Сохранить как PDF</a>
+<p class="no-print" align="right">
+	<a href="https://pdf-ace.com/pdfme/" target= "_blank">Сохранить как PDF</a>
+</p>
 
 </section>
 </body>
