Refactoring: Divide long text into smaller pieces

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/paper-css/0.3.0/paper.css">
 
 	<style>
-
 		h1 {
 			text-align: center;
 		}
+
 		h2 {
 			text-align: center;
 		}
@@ -87,7 +87,8 @@
 <table>
 	<tr>
 		<td nowrap>2006 - 2010</td>
-		<td>Новосибирский Государственный Университет, бакалавриат Физического Факультета, кафедра Автоматизации Физико-Технических Исследований</td>
+		<td>Новосибирский Государственный Университет, бакалавриат Физического Факультета,
+			кафедра Автоматизации Физико-Технических Исследований</td>
 	</tr>
 	<tr>
 		<td nowrap>2010 - 2012</td>
@@ -160,9 +161,17 @@
 
 <h2>Публикации в play market</h2>
 
-<p><a href="https://play.google.com/store/apps/details?id=ru.bananabits.android.foody">Foody</a> - приложение для составления списка покупок из выбранных пользователем рецептов. Вычисляет какие продукты нужно купить и в каком количестве. Написано с использованием C++, Qt, QML, QtFirebase, QtAndroidExtensions(2gis). Тесты написаны с использование catch.</p>
+<p><a href="https://play.google.com/store/apps/details?id=ru.bananabits.android.foody">Foody</a> -
+приложение для составления списка покупок из выбранных пользователем рецептов.
+Вычисляет какие продукты нужно купить и в каком количестве.
+Написано с использованием C++, Qt, QML, QtFirebase, QtAndroidExtensions(2gis).
+Тесты написаны с использование catch.</p>
 
-<p><a href="https://play.google.com/store/apps/details?id=ru.bananabits.android.sharp">Sharp</a> - симулятор реального пистолета. С помощью сенсоров определяет ориентацию телефона в пространстве, позволяет пользователю выбрать мишень и стрелять в нее, используя телефон как настоящий пистолет. Вычисляет точность выстрелов и количество набранных очков. Написано на Kotlin с использованием Dagger2, Firebase Analytics, Admob.
+<p><a href="https://play.google.com/store/apps/details?id=ru.bananabits.android.sharp">Sharp</a> -
+симулятор реального пистолета. С помощью сенсоров определяет ориентацию телефона в пространстве,
+позволяет пользователю выбрать мишень и стрелять в нее, используя телефон как настоящий пистолет.
+Вычисляет точность выстрелов и количество набранных очков.
+Написано на Kotlin с использованием Dagger2, Firebase Analytics, Admob.</p>
 
 <h2>Ссылки на сертификаты</h2>
 
@@ -172,17 +181,40 @@
 
 <h2>Участие в проектах</h2>
 
-<p><a href="https://yadi.sk/i/SCxe3UgikCHA2">SoftLab Biathlon Coach</a> - тренажер для стрельбы холостыми патронами по биатлонной мишени. На ствол крепится видеокамера, анализ видео прогнозирует куда попадет пуля. Мной была разработана архитектура системы, реализован сетевой протокол для управления мишенью, разработан пользовательский интерфейс. Приложение написано на С++ с использованием MFC и directshow.</p>
+<p><a href="https://yadi.sk/i/SCxe3UgikCHA2">SoftLab Biathlon Coach</a> -
+тренажер для стрельбы холостыми патронами по биатлонной мишени.
+На ствол крепится видеокамера, анализ видео прогнозирует куда попадет пуля.
+Мной была разработана архитектура системы, реализован сетевой протокол для управления мишенью,
+разработан пользовательский интерфейс.
+Приложение написано на С++ с использованием MFC и directshow.</p>
 
-<p><a href="https://www.movavi.ru/videoeditor/">Movavi Video Editor</a> - win/mac приложение, которое разрабатывалось более десяти лет, над которым работали несколько отдельных команд. Преимущественно занимался задачами бизнес логики, добавлением нового функционала, версткой пользовательского интерфейса, внедрением автотестов и исправлением багов. При работе использовал C++, Qt, catch, cmake.</p>
+<p><a href="https://www.movavi.ru/videoeditor/">Movavi Video Editor</a> -
+win/mac приложение, которое разрабатывалось более десяти лет, над которым работали несколько отдельных команд.
+Преимущественно занимался задачами бизнес логики, добавлением нового функционала,
+версткой пользовательского интерфейса, внедрением автотестов и исправлением багов.
+При работе использовал C++, Qt, catch, cmake.</p>
 
-<p><a href="https://play.google.com/store/apps/details?id=ru.dublgis.dgismobile">2GIS</a> - android приложение для работы с картой города. Работал в команде ядра, занимался разработкой внутренних интерфейсов для команд android и iOS. Разработка велась на C++ с использованием Qt, QML, boost, под linux, в качестве среды разработки QtCreator.
+<p><a href="https://play.google.com/store/apps/details?id=ru.dublgis.dgismobile">2GIS</a> -
+android приложение для работы с картой города.
+Работал в команде ядра, занимался разработкой внутренних интерфейсов для команд android и iOS.
+Разработка велась на C++ с использованием Qt, QML, boost, под linux, в качестве среды разработки QtCreator.</p>
 
 <h2>Обо мне</h2>
 
-<p>Целеустремленный, могу сутками думать над решением задачи. Есть желание постоянно развиваться и учиться чему-то новому. Считаю, что дорогие и качественные решения, лучше чем дешевые и временные. Предпочел бы иметь широкий кругозор и умение быстро разбираться, чем глубокие знания в узкой области. При решении задач стараюсь искать наилучшее решение, не всегда это первое рабочее решение.</p>
+<p>Целеустремленный, могу сутками думать над решением задачи.
+Есть желание постоянно развиваться и учиться чему-то новому.
+Считаю, что дорогие и качественные решения, лучше чем дешевые и временные.
+Предпочел бы иметь широкий кругозор и умение быстро разбираться, чем глубокие знания в узкой области.
+При решении задач стараюсь искать наилучшее решение, не всегда это первое рабочее решение.</p>
 
-<p>Долгое время использовал исключительно C++, потом родилась идея написать свое мобильное приложение на С++/QML. В ходе работы возникла необходимость использовать платформозависимый код, так я заинтересовался платформой Android и прочел хорошую книгу "Android. Программирование для профессионалов 3-е издание 2017". Опыт работы с C++ позволил без труда читать java код, но не все примеры кода на Kotlin мне были понятны, так я заинтересовался Kotlin. Мне понравился этот язык, и чтобы получше в нем разобраться написал еще одно приложение и опубликовал его в play market. Хоть у меня и мало опыта работы с Android, но у меня есть интерес и мотивация продолжать развиваться в этом направлении.</p>
+<p>Долгое время использовал исключительно C++, потом родилась идея написать свое мобильное приложение на С++/QML.
+В ходе работы возникла необходимость использовать платформозависимый код,
+так я заинтересовался платформой Android и прочел хорошую книгу
+"Android. Программирование для профессионалов 3-е издание 2017".
+Опыт работы с C++ позволил без труда читать java код,
+но не все примеры кода на Kotlin мне были понятны, так я заинтересовался Kotlin.
+Мне понравился этот язык, и чтобы получше в нем разобраться написал еще одно приложение и опубликовал его в play market.
+Хоть у меня и мало опыта работы с Android, но у меня есть интерес и мотивация продолжать развиваться в этом направлении.</p>
 
 <p class="no-print" align="right">
 	<button onclick="printPage()">Print/Save as PDF</button>
