Make photo smaller and add margin to table cells

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 			text-align: center;
 		}
 
+		td {
+			padding-right: 3mm;
+			vertical-align: top;
+		}
+
 		<!-- printable settings -->
 		@page { size: A4; }
 		@media screen { .sheet { margin: 3mm auto; } }
@@ -41,7 +46,7 @@
 <table>
 	<tr>
 		<td>
-			<img src="./images/photo_round.png" width="256px">
+			<img src="./images/photo_round.png" width="160px" hspace="40mm">
 		</td>
 		<td>
 			<table>
