--- a/index.html
+++ b/index.html
@@ -7,12 +7,27 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/paper-css/0.3.0/paper.css">
 
 	<style>
+		* {
+			font-family: "Times New Roman", Times, serif;
+			font-size: 12pt
+		}
+
 		h1 {
 			text-align: center;
+			font-size: 16pt;
+			margin-top: 0;
 		}
 
 		h2 {
 			text-align: center;
+			font-size: 14pt;
+			margin: 10pt 0 8pt;
+		}
+
+		p {
+			text-align: justify;
+			text-indent: 30pt;
+			margin: 0;
 		}
 
 		td {
