Fix print button

--- a/index.html
+++ b/index.html
@@ -224,9 +224,9 @@ android приложение для работы с картой города.
 Мне понравился этот язык, и чтобы получше в нем разобраться написал еще одно приложение и опубликовал его в play market.
 Хоть у меня и мало опыта работы с Android, но у меня есть интерес и мотивация продолжать развиваться в этом направлении.</p>
 
-<p class="no-print" align="right">
-	<button onclick="printPage()">Print/Save as PDF</button>
-</p>
+<div class="no-print" align="right">
+	<br><button onclick="printPage()">Print/Save as PDF</button>
+</div>
 
 </section>
 </body>
