Divide certificate references with commas

--- a/index.html
+++ b/index.html
@@ -180,9 +180,11 @@
 
 <h2>Ссылки на сертификаты</h2>
 
-<a href="https://drive.google.com/open?id=15Oub2s6kyQ46cU-gVCYjzJBZNLYL0y9J">С++</a>
-<a href="https://drive.google.com/open?id=180_r3mn6kDGEWIykSrBRIUl5itSl7ESX">git</a>
+<p>
+<a href="https://drive.google.com/open?id=15Oub2s6kyQ46cU-gVCYjzJBZNLYL0y9J">С++,</a>
+<a href="https://drive.google.com/open?id=180_r3mn6kDGEWIykSrBRIUl5itSl7ESX">git,</a>
 <a href="https://drive.google.com/open?id=1a9K-tL_NADU9Zwgygf9IrW-60UL5gcNB">agile</a>
+</p>
 
 </section>
 <section class="sheet padding-20mm">
