Minor fix work experience

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 	</tr>
 </table>
 
-<i>дополнительно, январь 2016 — май 2016: преподаватель-семинарист ООП С++, кафедра АФТИ при НГУ</i>
+<i>*январь 2016 — май 2016: преподаватель-семинарист ООП С++, кафедра АФТИ при НГУ</i>
 
 <h2>Навыки</h2>
 
