Make some capital letters

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 					<td>go-maxus-go</td>
 				</tr>
 				<tr>
-					<td>e-mail</td>
+					<td>E-mail</td>
 					<td>sheshukovmaxim@gmail.com</td>
 				</tr>
 				<tr>
@@ -164,7 +164,7 @@
 	</tr>
 </table>
 
-<h2>Публикации в play market</h2>
+<h2>Публикации в Google Play Market</h2>
 
 <p><a href="https://play.google.com/store/apps/details?id=ru.bananabits.android.foody">Foody</a> -
 приложение для составления списка покупок из выбранных пользователем рецептов.
@@ -223,7 +223,7 @@ android приложение для работы с картой города.
 "Android. Программирование для профессионалов 3-е издание 2017".
 Опыт работы с C++ позволил без труда читать java код,
 но не все примеры кода на Kotlin мне были понятны, так я заинтересовался Kotlin.
-Мне понравился этот язык, и чтобы получше в нем разобраться написал еще одно приложение и опубликовал его в play market.
+Мне понравился этот язык, и чтобы получше в нем разобраться написал еще одно приложение и опубликовал его в Play Market.
 Хоть у меня и мало опыта работы с Android, но у меня есть интерес и мотивация продолжать развиваться в этом направлении.</p>
 
 <div class="no-print" align="right">
