--- a/ru.html
+++ b/ru.html
@@ -73,20 +73,20 @@
 
 <table>
 	<tr>
-		<td nowrap>январь 2009 — июнь 2012</td>
+		<td nowrap>январь 2009 - июнь 2012</td>
 		<td>С++ программист при институте ИАиЭ СО РАН</td>
 	</tr>
 	<tr>
-		<td nowrap>ноябрь 2013 — июнь 2018</td>
+		<td nowrap>ноябрь 2013 - июнь 2018</td>
 		<td>C++ разработчик в компаниях SoftLab-NSK, Movavi, 2Gis, Luxoft(Deutsche bank)</td>
 	</tr>
 	<tr>
-		<td nowrap>июнь 2018 — данный момент</td>
+		<td nowrap>июнь 2018 - данный момент</td>
 		<td>C++/Android/Kotlin разработка и публикация собственных мобильных приложений</td>
 	</tr>
 </table>
 
-<i>*январь 2016 — май 2016: преподаватель-семинарист ООП С++, кафедра АФТИ при НГУ</i>
+<i>*январь 2016 - июнь 2016: преподаватель-семинарист ООП С++, кафедра АФТИ при НГУ</i>
 
 <h2>Навыки</h2>
 
