Change e-mail text to mailto reference

--- a/en.html
+++ b/en.html
@@ -36,7 +36,7 @@
 				</tr>
 				<tr>
 					<td>E-mail</td>
-					<td>sheshukovmaxim@gmail.com</td>
+					<td><a href="mailto:sheshukovmaxim@gmail.com">sheshukovmaxim@gmail.com</a></td>
 				</tr>
 				<tr>
 					<td>Residence</td>
