--- a/en.html
+++ b/en.html
@@ -60,12 +60,11 @@
 <table>
 	<tr>
 		<td nowrap>2006 - 2010</td>
-		<td>Bachelor of Science: Novosibirsk State University - Physics.
-			Specialization: Automation of Physics and Technical Researches.</td>
+		<td>Bachelor of Science: Novosibirsk State University(NSU) - Physics.</td>
 	</tr>
 	<tr>
 		<td nowrap>2010 - 2012</td>
-		<td>M. Sc.: NSU - Physics. Specialization: APTR.</td>
+		<td>Master of Science: NSU - Physics.</td>
 	</tr>
 </table>
 
@@ -74,19 +73,19 @@
 <table>
 	<tr>
 		<td nowrap>01/2009 - 06/2012</td>
-		<td>C++ developer in
+		<td>C++ developer at
 		Institute of Automation and Electrometry of the Siberian Branch of the Russian Academy of Sciences</tr>
 	<tr>
 		<td nowrap>11/2013 - 06/2018</td>
-		<td>C++ developer in: SoftLab-NSK, Movavi, 2Gis, Luxoft(Deutsche bank)</td>
+		<td>C++ developer at: SoftLab-NSK, Movavi, 2Gis, Luxoft(Deutsche bank)</td>
 	</tr>
 	<tr>
 		<td nowrap>06/2018 - present</td>
-		<td>C++/Android/Kotlin developing and publication my own mobile applicatoins</td>
+		<td>C++/Android/Kotlin development and publication of my own mobile applications</td>
 	</tr>
 </table>
 
-<i>*01/2016 - 06/2016: C++/OOP university teacher in NSU</i>
+<i>*01/2016 - 06/2016: C++/OOP university teacher at NSU</i>
 
 <h2>Skills</h2>
 
@@ -122,7 +121,7 @@
 
 <p><a href="https://play.google.com/store/apps/details?id=ru.bananabits.android.foody">Foody</a> -
 a cookbook application combined with a shopping list.
-Main goal is to calculate ingredients amount for user selected dishes and to provide a convinient shopping list.
+Main goal is to calculate ingredients amount for user's selected dishes and to provide a convinient shopping list.
 Developed in C++ using Qt, QML, QtFirebase, QtAndroidExtensions.
 Tests framework is Catch.</p>
 
@@ -130,7 +129,7 @@ Tests framework is Catch.</p>
 a pistol simulator application.
 Detects phone orientation in surrounding area using built-in sensors.
 User can choose a target and shoot in the target's direction.
-The application views target image with bullet holes and calculates scores.
+The application shows the image of target with bullet holes and calculates scores.
 Developed in Kotlin using Dagger2, Firebase Analytics, Admob.</p>
 
 <h2>Certificate references</h2>
@@ -148,38 +147,37 @@ Developed in Kotlin using Dagger2, Firebase Analytics, Admob.</p>
 
 <p><a href="https://yadi.sk/i/SCxe3UgikCHA2">SoftLab Biathlon Coach</a> -
 safe biathlon shooting trainer without bullets.
-The system consists from a special gun with built-in camera, an electromechanical target and
+The system consists of a special gun with a built-in camera, an electromechanical target and
 an application that calculates bullet trajectory.
-The system design, network protocol for target control and user interface were developed by myself.
+The system design, the network protocol for target control and the user interface were developed by myself.
 The application was developed in C++ with MFC and DirectShow.</p>
 
 <p><a href="https://www.movavi.ru/videoeditor/">Movavi Video Editor</a> -
 
-a big Win/Mac application that was developed more than ten years by several different teams.
+a big Win/Mac application that was developed for more than ten years by several different teams.
 My tasks were usually connected with business logic, system design, feature development, autotest adding and bugfixing.
 C++, Qt, Catch, CMake were mostly used.</p>
 
 <p><a href="https://play.google.com/store/apps/details?id=ru.dublgis.dgismobile">2GIS</a> -
-an android application for buildings search on a city map.
-I worked in the core development team that creates and supports
-inner library with interfaces and implementations for Android and iOS teams.
+an Android application for a buildings search on a city map.
+I worked in the core development team that evolves the core inner library with interfaces and implementations for Android and iOS teams.
 I used C++ with Qt, QML, Boost. OS - Linux, IDE - QtCreator.</p>
 
 <h2>About myself</h2>
 
-<p>I always find ways to improve my skills and learn IT related stuff.
+<p>I always look for ways to improve my skills and learn IT related stuff.
 I think expensive and good quality solutions are better than cheap and temporary ones.
 I prefer to have a spacious mind and ability to fast look into a problem than deep knowledge in a narrow field.
 When I solve a problem I always try to find the best fit solution, sometimes it isn't the first one which works.</p>
 
 <p>
-I used C++ for a long time, utill once I came up with an idea to develop my own mobile application.
+I used C++ for a long time until once I came up with an idea to develop my own mobile application.
 During development I found out necessity to use platform dependent code.
-After that I was interested in Android OS and I've read a good book "Android Programming: The Big Nerd Ranch Guide".
-With C++ background I was able to read java code but I had problems with some examples written in Kotlin.
-Later I was interested in Kotlin and I like that language pretty much.
-Now I'm an experienced C++ developer and also I'm familiar with Android and Kotlin.
-I have the motivation to continue improving skills.</p>
+After that I got interested in Android OS and I read a good book "Android Programming: The Big Nerd Ranch Guide".
+With C++ background I was able to read java code but I had problems with some code examples written in Kotlin.
+Later I got interested in Kotlin and I like that language pretty much now.
+Today I'm an experienced C++ developer and also I'm familiar with Android and Kotlin.
+I'm motivated to continue improving my skills.</p>
 
 <div class="no-print" align="right">
 	<br><button onclick="window.print()">Print/Save as PDF...</button>
