--- a/en.html
+++ b/en.html
@@ -39,7 +39,7 @@
 					<td><a href="mailto:sheshukovmaxim@gmail.com">sheshukovmaxim@gmail.com</a></td>
 				</tr>
 				<tr>
-					<td>Residence</td>
+					<td>Adress</td>
 					<td>Moscow, Russia</td>
 				</tr>
 				<tr>
@@ -143,35 +143,35 @@ Developed in Kotlin using Dagger2, Firebase Analytics, Admob.</p>
 </section>
 <section class="sheet padding-20mm">
 
-<h2>Projects participation</h2>
+<h2>Participation in projects</h2>
 
 <p><a href="https://yadi.sk/i/SCxe3UgikCHA2">SoftLab Biathlon Coach</a> -
 safe biathlon shooting trainer without bullets.
 The system consists of a special gun with a built-in camera, an electromechanical target and
 an application that calculates bullet trajectory.
-The system design, the network protocol for target control and the user interface were developed by myself.
+The system design, the network protocol for target control and the user interface were developed by me.
 The application was developed in C++ with MFC and DirectShow.</p>
 
 <p><a href="https://www.movavi.ru/videoeditor/">Movavi Video Editor</a> -
 
-a big Win/Mac application that was developed for more than ten years by several different teams.
+a Win/Mac application with a huge codebase that has been developed for more than ten years by several different teams.
 My tasks were usually connected with business logic, system design, feature development, autotest adding and bugfixing.
 C++, Qt, Catch, CMake were mostly used.</p>
 
 <p><a href="https://play.google.com/store/apps/details?id=ru.dublgis.dgismobile">2GIS</a> -
-an Android application for a buildings search on a city map.
+an Android application for a local search on a digital city map.
 I worked in the core development team that evolves the core inner library with interfaces and implementations for Android and iOS teams.
 I used C++ with Qt, QML, Boost. OS - Linux, IDE - QtCreator.</p>
 
 <h2>About myself</h2>
 
-<p>I always look for ways to improve my skills and learn IT related stuff.
+<p>I'm always looking for ways to improve my skills and learn IT related stuff.
 I think expensive and good quality solutions are better than cheap and temporary ones.
-I prefer to have a spacious mind and ability to fast look into a problem than deep knowledge in a narrow field.
+I prefer to have a spacious mind and ability to look fast into a problem than deep knowledge in a narrow field.
 When I solve a problem I always try to find the best fit solution, sometimes it isn't the first one which works.</p>
 
 <p>
-I used C++ for a long time until once I came up with an idea to develop my own mobile application.
+I'd used C++ for a long time until once I came up with an idea to develop my own mobile application.
 During development I found out necessity to use platform dependent code.
 After that I got interested in Android OS and I read a good book "Android Programming: The Big Nerd Ranch Guide".
 With C++ background I was able to read java code but I had problems with some code examples written in Kotlin.
