Add Esc Tech job, update age

--- a/en.html
+++ b/en.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Maxim Shehukov | C++/Android developer</title>
+	<title>Maxim Shehukov | Senior C++/Qt developer</title>
 
 	<link rel="shortcut icon" type="image/x-icon" href="./images/title_icon.png" />
 	<link rel="stylesheet" href="styles/styles.css">
@@ -9,7 +9,7 @@
 <body class="A4">
 <section class="sheet padding-20mm">
 
-<h1>Maxim Sheshukov, C++/Android developer</h1>
+<h1>Maxim Sheshukov, Senior C++/Qt developer</h1>
 
 <table>
 	<tr>
@@ -20,7 +20,7 @@
 			<table>
 				<tr>
 					<td>Age</td>
-					<td>29</td>
+					<td>30</td>
 				</tr>
 				<tr>
 					<td>Phone</td>
@@ -80,8 +80,12 @@
 		<td>C++ developer at: SoftLab-NSK, Movavi, 2Gis, Luxoft(Deutsche bank)</td>
 	</tr>
 	<tr>
-		<td nowrap>06/2018 - present</td>
+		<td nowrap>06/2018 - 11/2018</td>
 		<td>C++/Android/Kotlin development and publication of my own mobile applications</td>
+	</tr>
+	<tr>
+		<td nowrap>11/2018 - present</td>
+		<td>Senior C++/Qt/Android developer at Escape Technologies</td>
 	</tr>
 </table>
 
