--- a/ru.html
+++ b/ru.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Максим Шешуков | C++/Android разрабочик</title>
+	<title>Максим Шешуков | Ведущий C++/Qt разрабочик</title>
 
 	<link rel="shortcut icon" type="image/x-icon" href="./images/title_icon.png" />
 	<link rel="stylesheet" href="styles/styles.css">
@@ -9,7 +9,7 @@
 <body class="A4">
 <section class="sheet padding-20mm">
 
-<h1>Максим Шешуков, C++/Android разработчик</h1>
+<h1>Максим Шешуков, ведущий C++/Qt разработчик</h1>
 
 <table>
 	<tr>
@@ -20,7 +20,7 @@
 			<table>
 				<tr>
 					<td>Возраст</td>
-					<td>29 лет</td>
+					<td>30 лет</td>
 				</tr>
 				<tr>
 					<td>Телефон</td>
@@ -81,8 +81,12 @@
 		<td>C++ разработчик в компаниях SoftLab-NSK, Movavi, 2Gis, Luxoft(Deutsche bank)</td>
 	</tr>
 	<tr>
-		<td nowrap>июнь 2018 - данный момент</td>
+		<td nowrap>июнь 2018 - ноябрь 2018</td>
 		<td>C++/Android/Kotlin разработка и публикация собственных мобильных приложений</td>
+	</tr>
+	<tr>
+		<td nowrap>ноябрь 2018 - данный момент</td>
+		<td>Ведущий C++/Qt/Android разработчик в Escape Technologies</td>
 	</tr>
 </table>
 
