Add univercity wikipedia link

--- a/en.html
+++ b/en.html
@@ -60,11 +60,11 @@
 <table>
 	<tr>
 		<td nowrap>2006 - 2010</td>
-		<td>Bachelor of Science: Novosibirsk State University(NSU) - Physics.</td>
+		<td>Bachelor of Science: <a href="https://en.wikipedia.org/wiki/Novosibirsk_State_University">Novosibirsk State University(NSU)</a> - Physics.</td>
 	</tr>
 	<tr>
 		<td nowrap>2010 - 2012</td>
-		<td>Master of Science: NSU - Physics.</td>
+		<td>Master of Science: <a href="https://en.wikipedia.org/wiki/Novosibirsk_State_University">NSU</a> - Physics.</td>
 	</tr>
 </table>
 
