--- a/ru.html
+++ b/ru.html
@@ -60,12 +60,13 @@
 <table>
 	<tr>
 		<td nowrap>2006 - 2010</td>
-		<td>Новосибирский Государственный Университет, бакалавриат Физического Факультета,
-			кафедра Автоматизации Физико-Технических Исследований</td>
+		<td><a href="https://ru.wikipedia.org/wiki/%D0%9D%D0%BE%D0%B2%D0%BE%D1%81%D0%B8%D0%B1%D0%B8%D1%80%D1%81%D0%BA%D0%B8%D0%B9_%D0%B3%D0%BE%D1%81%D1%83%D0%B4%D0%B0%D1%80%D1%81%D1%82%D0%B2%D0%B5%D0%BD%D0%BD%D1%8B%D0%B9_%D1%83%D0%BD%D0%B8%D0%B2%D0%B5%D1%80%D1%81%D0%B8%D1%82%D0%B5%D1%82">Новосибирский Государственный Университет,</a>
+		бакалавриат Физического Факультета, кафедра Автоматизации Физико-Технических Исследований</td>
 	</tr>
 	<tr>
 		<td nowrap>2010 - 2012</td>
-		<td>НГУ, магистратура ФФ, кафедра АФТИ</td>
+		<td><a href="https://ru.wikipedia.org/wiki/%D0%9D%D0%BE%D0%B2%D0%BE%D1%81%D0%B8%D0%B1%D0%B8%D1%80%D1%81%D0%BA%D0%B8%D0%B9_%D0%B3%D0%BE%D1%81%D1%83%D0%B4%D0%B0%D1%80%D1%81%D1%82%D0%B2%D0%B5%D0%BD%D0%BD%D1%8B%D0%B9_%D1%83%D0%BD%D0%B8%D0%B2%D0%B5%D1%80%D1%81%D0%B8%D1%82%D0%B5%D1%82">НГУ,</a>
+		магистратура ФФ, кафедра АФТИ</td>
 	</tr>
 </table>
 
