Add boost to other skills

--- a/en.html
+++ b/en.html
@@ -116,7 +116,7 @@
 	</tr>
 	<tr>
 		<td nowrap>Other</td>
-		<td>Vim, Java, Firebase, Python, UML, Lua, Bash, NuGet, DirectX</td>
+		<td>Boost, Vim, Java, Firebase, Python, UML, Lua, Bash, NuGet, DirectX</td>
 	</tr>
 </table>
 
