--- a/ru.html
+++ b/ru.html
@@ -118,7 +118,7 @@
 	</tr>
 	<tr>
 		<td nowrap>Прочее</td>
-		<td>Vim, Java, Firebase, Python, UML, Lua, Bash, NuGet, DirectX</td>
+		<td>Boost, Vim, Java, Firebase, Python, UML, Lua, Bash, NuGet, DirectX</td>
 	</tr>
 </table>
 
