Update photo image

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 	<tr>
 		<td>
 			<div id="photo_holder">
-				<img src="./images/photo_square.png" width="150px">
+				<img src="./images/photo_grey.png" width="150px">
 			</div>
 		</td>
 		<td width="100%" style="padding-left: 16px;">
