Fix luxoft work date

--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
 	<tr>
 		<td class="aligned">
 			<b>Senior C++ Developer</b><br />
-			11/2018 - present
+			11/2018 - present<br />
 		</td>
 		<td>
-			<i>Luxoft, Escape Technologies, Moscow<br /></i>
+			<i>Escape Technologies, Moscow<br /></i>
 			<ul>
 				<li>Speeded up database by 30% by implementing a LRU cache system</li>
 				<li>Decreased legacy bugs population by development a crossplatform unit test system</li>
@@ -155,10 +155,10 @@
 	<tr>
 		<td class="aligned">
 			<b>Middle C++ Developer</b><br />
-			03/2016 - 12/2017
+			03/2016 - 06/2018
 		</td>
 		<td>
-			<i>Movavi, 2Gis, Novosibirsk<br /></i>
+			<i>Movavi, 2Gis, Novosibirsk; Luxoft, Moscow<br /></i>
 			<ul>
 				<li>Implemented a slideshow master which became a successful separate product</li>
 				<li>Increased video editor's selling by 10% by maintaining tutorials</li>
