--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
 		<td>
 			<i>Escape Technologies, Moscow<br /></i>
 			<ul>
-				<li>Speeded up database by 30% by implementing a LRU cache system</li>
-				<li>Decreased legacy bugs population by development a crossplatform unit test system</li>
+				<li>Accelerated database by 30% by implementing a LRU cache system</li>
+				<li>Decreased legacy bugs population by development a cross-platform unit test system</li>
 			</li>
 		</td>
 	</tr>
@@ -171,9 +171,9 @@
 			11/2013 - 03/2016
 		</td>
 		<td>
-			<i>SoftLab-NSK, Novoribirsk<br /></i>
+			<i>SoftLab-NSK, Novosibirsk<br /></i>
 			<ul>
-				<li>Developed safe bulletless biathlon training system for children</li>
+				<li>Developed no bullets biathlon training system for children</li>
 			</li>
 		</td>
 	</tr>
