Fix typos and change some hobbies icons

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 		<td>
 			<i><a href="https://en.wikipedia.org/wiki/Novosibirsk_State_University">Novosibirsk State University</a>, Russia</i>
 			<ul>
-				<li>Department of automation physical and technical researches</li>
+				<li>Department of automation of physical and technical researches</li>
 			</li>
 		</td>
 	</tr>
