Add BinarySpace info

--- a/index.html
+++ b/index.html
@@ -141,40 +141,29 @@
 <table>
 	<tr>
 		<td class="aligned">
+			<b>Software Engineer C++</b><br />
+			06/2019 - nowadays<br />
+		</td>
+		<td>
+			<i>Berlin: BinarySpaces<br /></i>
+			<ul>
+				<li>Speed up project save time by 50% by caching data in memory instead of hard disk drive.</li>
+				<li>Implementation of a "Rotary Table" machine setup feature.</li>
+			</ul>
+		</td>
+	</tr>
+	<tr>
+		<td class="aligned">
 			<b>Senior C++ Developer</b><br />
-			11/2018 - 03/2019<br />
+			11/2013 - 03/2019<br />
 		</td>
 		<td>
-			<i>Escape Technologies, Moscow<br /></i>
+			<i>Moscow: Luxoft, Escape Technologies</i><br />
+			<i>Novosibirsk: SoftLab-NSK, Movavi, 2Gis</i> <br />
 			<ul>
-				<li>Accelerated database by 30% by implementing a LRU cache system</li>
-				<li>Decreased legacy bugs population by development a cross-platform unit test system</li>
-			</li>
-		</td>
-	</tr>
-	<tr>
-		<td class="aligned">
-			<b>Middle C++ Developer</b><br />
-			03/2016 - 06/2018
-		</td>
-		<td>
-			<i>Movavi, 2Gis, Novosibirsk; Luxoft, Moscow<br /></i>
-			<ul>
-				<li>Implemented a slideshow master which became a successful separate product</li>
-				<li>Increased video editor's selling by 10% by maintaining tutorials</li>
-			</li>
-		</td>
-	</tr>
-	<tr>
-		<td class="aligned">
-			<b>Junior C++ Developer</b><br />
-			11/2013 - 03/2016
-		</td>
-		<td>
-			<i>SoftLab-NSK, Novosibirsk<br /></i>
-			<ul>
-				<li>Developed no bullets biathlon training system for children</li>
-			</li>
+				<li>Developed no bullets biathlon training system(insert ref) for children</li>
+				<li>Implemented a slideshow master which became a successful separate product(insert ref)</li>
+			</ul>
 		</td>
 	</tr>
 </table>
