Update info and links

--- a/index.html
+++ b/index.html
@@ -105,13 +105,13 @@
 		<td width="100%" style="padding-left: 16px;">
 			<h1>Maxim Sheshukov</h1>
 			<hr>
-			15/11/1988 &#x25cf; Russian &#x25cf; Moscow, Russia &#x25cf; sheshukov.maxim@gmail.com<br />
+			15/11/1988 &#x25cf; Russian &#x25cf; Berlin, Germany &#x25cf; sheshukov.maxim@gmail.com<br />
 			&#x25cf; github/skype: go-maxus-go
 			<hr>
 			<p align="justify" style="text-indent: 0px;">
-			Results-focused software developer with 5+ years experience designing and implementing cross-platform user interface applications.
-			Well-versed in producing efficient, easy-readable, scalable, reusable and covered by tests code.
-			Initiative and creative, constantly looking for ways to improve a product and development process.
+			Results-focused software engineer with 5+ years of experience of design and implementation of cross-platform applications.
+			Well-versed in producing efficient, easy-readable, scalable, reusable and test covered code.
+			Initiative and creative, constantly looking for ways to improve the development process.
 			</p>
 		</td>
 	</tr>
@@ -145,10 +145,10 @@
 			06/2019 - nowadays<br />
 		</td>
 		<td>
-			<i>Berlin: BinarySpaces<br /></i>
+			Berlin: <i>BinarySpaces<br /></i>
 			<ul>
-				<li>Speed up project save time by 50% by caching data in memory instead of hard disk drive.</li>
-				<li>Implementation of a "Rotary Table" machine setup feature.</li>
+				<li>Reduced project save time by 50% by implementing data cache in RAM.</li>
+				<li>Implemented a release MVP feature "Rotary Table" for machine setup.</li>
 			</ul>
 		</td>
 	</tr>
@@ -158,11 +158,13 @@
 			11/2013 - 03/2019<br />
 		</td>
 		<td>
-			<i>Moscow: Luxoft, Escape Technologies</i><br />
-			<i>Novosibirsk: SoftLab-NSK, Movavi, 2Gis</i> <br />
+			Moscow: <i>Luxoft, Escape Technologies</i><br />
+			Novosibirsk: <i>SoftLab-NSK, Movavi, 2Gis</i> <br />
 			<ul>
-				<li>Developed no bullets biathlon training system(insert ref) for children</li>
-				<li>Implemented a slideshow master which became a successful separate product(insert ref)</li>
+				<li>Designed a no bullets chindren's
+					<a href=https://drive.google.com/open?id=1obonHSKtsqmg0XIQM0_egqadyE30Fnq2>biathlon training system</a></li>
+				<li>Implemented a "Slideshow Master" that became a successful
+					<a href=https://www.movavi.com/photo-to-dvd-slideshow/?asrc=main_menu>separate product</a></li>
 			</ul>
 		</td>
 	</tr>
@@ -192,7 +194,7 @@
 		<td>
 			<i>Work from home, Moscow<br /></i>
 			<ul>
-				<li>Gained experience of producing and publication of own application
+				<li>Design and publication of own application
 				<a href="https://play.google.com/store/apps/details?id=ru.bananabits.android.foody">Foody</a></li>
 				<li>Opened the mind by looking into Android operating system</li>
 			</li>
@@ -299,6 +301,7 @@
 				<tr><td><b>Languages</b></td></tr>
 				<tr><td>Russian</td><td align="right">Native</td></tr>
 				<tr><td>English</td><td align="right">Advanced</td></tr>
+				<tr><td>German</td><td align="right">Pre-Intermediate</td></tr>
 			</table>
 		</td>
 	</tr>
